2012-03-30  Andreas Kupries  <andreask@activestate.com>

	* uevent.man: New feature. Version bumped to 0.3.
	* uevent.pcx: Get events when tag and/or tag/event combination
	* uevent.tcl: begins to be observed, and when observation ends.
	* uevent.test: This allows a caller of uevent::generate to
	* pkgIndex.tcl: optimize its own behaviour, i.e. initialize
	  whatever resources are needed only when the tags/events it
	  generates are actually observed by somebody. Updated all of
	  documentation, testsuite, and checker definitions.

	  Refactored the internals a bit. When run under Tcl 8.5 or higher
	  the API ensemblifies itself.

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-11-04  Andreas Kupries  <andreask@activestate.com>

	* uevent_onidle.pcx: Added new package 'uevent::onidle' for
	* uevent_onidle.tcl: deferal of actions to idle time, merging
	* uevent_onidle.man: multiple requests.
	* pkgIndex.tcl:

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uevent.pcx: New file. Syntax definitions for the public commands
	  of the uevent package.

2008-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uevent.tcl: Added a new command 'uevent::list', in fulfilment of
	* uevent.man: [Bug 1804388]. Extended the documentation. Bumped
	* pkgIndex.tcl: the package to version 0.2.
